fixed sonarcloud issues